增加测试各种Drawable的文章，修改部分BUG

--- a/module_tech/src/main/res/drawable/ic_drawable_shape.xml
+++ b/module_tech/src/main/res/drawable/ic_drawable_shape.xml
@@ -22,6 +22,8 @@
     <!--  渐变(和solid冲突)  -->
     <gradient
         android:type="sweep"
+        android:centerY="50%"
+        android:centerX="25%"
         android:startColor="@color/red"
         android:centerColor="@color/yellow"
         android:endColor="@color/purple"
