增加view动画调试案例

--- a/module_tech/src/main/res/navigation/tech_navigation.xml
+++ b/module_tech/src/main/res/navigation/tech_navigation.xml
@@ -57,6 +57,10 @@
             app:destination="@id/drawableTestDemo">
         </action>
 
+        <action android:id="@+id/action_main_to_animation_test"
+            app:destination="@id/animationTestDemo">
+        </action>
+
     </fragment>
 
     <fragment
@@ -76,5 +80,11 @@
         android:name="com.silencefly96.module_tech.tech.demo.DrawableTestDemo"
         android:label="@string/drawable_test_fragment"
         tools:layout="@layout/fragment_drawable_test" />
+
+    <fragment
+        android:id="@+id/animationTestDemo"
+        android:name="com.silencefly96.module_tech.tech.demo.AnimationTestDemo"
+        android:label="@string/animation_test_fragment"
+        tools:layout="@layout/fragment_animation_test" />
 
 </navigation>
