修改Android Vector动画文章

--- a/module_tech/src/main/res/drawable/ic_animated_vector_morphing.xml
+++ b/module_tech/src/main/res/drawable/ic_animated_vector_morphing.xml
@@ -11,6 +11,6 @@
 
     <target
         android:animation="@animator/animator_vector_morphing_line"
-        android:name="vector_rectangle"/>
+        android:name="vector_four_line"/>
 
 </animated-vector>
