--- a/module_tech/src/main/res/drawable/ic_vector_morphing.xml
+++ b/module_tech/src/main/res/drawable/ic_vector_morphing.xml
@@ -38,7 +38,7 @@
 
     <!--四条从顶点连接到中心点的线段-->
     <path
-        android:name="vector_rectangle"
+        android:name="vector_four_line"
         android:strokeWidth="1"
         android:strokeColor="#9FBF3B"
         android:pathData="M0,0 L12,12
@@ -49,7 +49,7 @@
 
     <!--四条从顶点连接到圆上下左右顶点的线段，变大后的样子(调试用，隐藏了)-->
     <path
-        android:name="vector_rectangle_after"
+        android:name="vector_four_line_after"
         android:strokeAlpha="0"
         android:strokeWidth="1"
         android:strokeColor="#9FBF3B"
