--- a/module_tech/src/main/res/values-v21/themes.xml
+++ b/module_tech/src/main/res/values-v21/themes.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Fundark" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
@@ -14,5 +15,8 @@
         <!-- Customize your theme here. -->
     </style>
     <style name="CustomActivityTheme" parent="Theme.Fundark">
+        <!-- 启用 FEATURE_CONTENT_TRANSITIONS 特性 -->
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:windowAllowEnterTransitionOverlap">true</item>
     </style>
 </resources>
