--- a/module_tech/src/main/res/layout/fragment_remote_test.xml
+++ b/module_tech/src/main/res/layout/fragment_remote_test.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="18dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/notiBtn"
+        android:text="打开前台服务"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:orientation="vertical"
-        >
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:ignore="HardcodedText"
+        />
 
-        <TextView
-            android:id="@+id/viewAnimation"
-            android:text="ViewAnimation(click)"
-            android:background="@drawable/ic_launcher"
-            android:layout_width="wrap_content"
-            android:layout_height="80dp"
-            android:layout_margin="5dp"
-            android:clickable="true"
-            android:focusable="true"
-            tools:ignore="HardcodedText"
-            />
+    <Button
+        android:id="@+id/desktopBtn"
+        android:text="桌面小组件"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/notiBtn"
+        android:layout_marginStart="18dp"
+        tools:ignore="HardcodedText"
+        />
 
-    </LinearLayout>
-
-</ScrollView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/desktopBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/recycler"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
