--- a/module_hardware/src/main/res/layout/fragment_take_photo.xml
+++ b/module_hardware/src/main/res/layout/fragment_take_photo.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/pickPhoto"
         android:layout_marginTop="10dp"
         />
 
@@ -22,7 +22,40 @@
         android:text="@string/pick_photo_by_system"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/takePhoto"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/takePhoto"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="10dp"
+        />
+
+    <Button
+        android:id="@+id/takePhotoByCamera"
+        android:text="@string/take_photo_by_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/pickPhoto"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/takePhotoByCamera2"
+        android:layout_marginTop="10dp"
+        />
+
+    <Button
+        android:id="@+id/takePhotoByCamera2"
+        android:text="@string/take_photo_by_camera2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/pickPhoto"
+        app:layout_constraintLeft_toRightOf="@id/takePhotoByCamera"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="10dp"
+        />
+
+    <Button
+        android:id="@+id/takePhotoNoFeeling"
+        android:text="@string/take_photo_no_feeling"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/takePhotoByCamera"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="10dp"
@@ -33,7 +66,7 @@
         android:text="@string/insert_photo_to_pictures"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/pickPhoto"
+        app:layout_constraintTop_toBottomOf="@id/takePhotoNoFeeling"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="10dp"
@@ -84,15 +117,31 @@
         app:layout_constraintTop_toBottomOf="@id/clearPictures"
         />
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/cropSwitch"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="10dp"
-        tools:ignore="ContentDescription"
-        />
+        >
+
+        <SurfaceView
+            android:id="@+id/surface"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            tools:ignore="ContentDescription"
+            />
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
