--- a/module_hardware/src/main/res/layout/fragment_take_photo.xml
+++ b/module_hardware/src/main/res/layout/fragment_take_photo.xml
@@ -35,13 +35,13 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/pickPhoto"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/takePhotoByCamera2"
+        app:layout_constraintRight_toLeftOf="@id/takePhotoNoFeeling"
         android:layout_marginTop="10dp"
         />
 
     <Button
-        android:id="@+id/takePhotoByCamera2"
-        android:text="@string/take_photo_by_camera2"
+        android:id="@+id/takePhotoNoFeeling"
+        android:text="@string/take_photo_no_feeling"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/pickPhoto"
@@ -51,12 +51,23 @@
         />
 
     <Button
-        android:id="@+id/takePhotoNoFeeling"
-        android:text="@string/take_photo_no_feeling"
+        android:id="@+id/takePhotoByCamera2"
+        android:text="@string/take_photo_by_camera2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/takePhotoByCamera"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/takePhotoByCameraX"
+        android:layout_marginTop="10dp"
+        />
+
+    <Button
+        android:id="@+id/takePhotoByCameraX"
+        android:text="@string/take_photo_by_cameraX"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/takePhotoByCamera"
+        app:layout_constraintLeft_toRightOf="@+id/takePhotoByCamera2"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="10dp"
         />
@@ -66,7 +77,7 @@
         android:text="@string/insert_photo_to_pictures"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/takePhotoNoFeeling"
+        app:layout_constraintTop_toBottomOf="@id/takePhotoByCamera2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="10dp"
@@ -132,6 +143,13 @@
             android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            />
+
+        <TextureView
+            android:id="@+id/textureView"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             />
 
         <ImageView
