--- a/module_hardware/src/main/res/layout/fragment_take_photo.xml
+++ b/module_hardware/src/main/res/layout/fragment_take_photo.xml
@@ -154,7 +154,7 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
             tools:ignore="ContentDescription"
