持续优化飞弹游戏逻辑，移动一些文章位置

--- a/module_views/src/main/res/layout/fragment_game_fly_egg.xml
+++ b/module_views/src/main/res/layout/fragment_game_fly_egg.xml
@@ -9,6 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
+        app:eggMask="@drawable/ic_node"
+        app:boatMask="@drawable/ic_boat"
+        app:gameConfig="@array/easy"
+        app:showTip="true"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
