--- a/module_mvvm/src/main/res/layout/fragment_plan_detail.xml
+++ b/module_mvvm/src/main/res/layout/fragment_plan_detail.xml
@@ -2,6 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="viewmodel"
+            type="com.silencefly96.module_mvvm.plan.PlanViewModel" />
+
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
